--- a/samples/ExampleBlazorApp/Components/Pages/SmartComboBoxExamples/Examples.razor
+++ b/samples/ExampleBlazorApp/Components/Pages/SmartComboBoxExamples/Examples.razor
@@ -2,6 +2,11 @@
 
 <PageTitle>Smart ComboBox</PageTitle>
 
+<p class="p-4">
+    <span class="font-semibold">Smart ComboBox</span> is an upgrade for a regular combo box. Except instead of just offering
+    substring matches, it offers <span class="font-semibold">semantic matches</span>.
+</p>
+
 <form class="default-form rounded-md bg-gray-200 p-6 shadow-xl mb-12 grid gap-12 md:grid-cols-2">
     <div class="floating-placeholder" data-permanent="combo-box-example">
         <SmartComboBox Url="api/suggestions/expense-category"
